<resources>
    <string name="app_name">围界安防</string>
    <string name="account">请输入账号</string>
    <string name="password">请输入密码</string>
    <string name="check_password">记住密码</string>
    <string name="check_login">自动登录</string>
    <string name="login">登  录</string>
    <string name="loading">正在加载中</string>
    <string name="nowrecord">当前记录</string>
    <string name="solve">警报处理</string>
    <string name="recordtime">警报时间</string>
    <string name="recordlocation">设备地点</string>
    <string name="deviceid">设备编号</string>
    <string name="devicenum">设备编号：</string>
    <string name="devicestatus">设备状态：</string>>
    <string name="submit">提   交</string>
    <string name="record">警报记录</string>
    <string name="statistic">统计</string>
    <string name="confirmpoint">确认选点</string>
    <string name="allrecord">所有记录</string>
    <string name="devicelist">设备列表</string>
    <string name="ipaddress">IP地址：</string>
    <string name="devicedata">设备参数</string>
    <string name="deviceidl">设备号：</string>
    <string name="area">所在区域：</string>
    <string name="defarea">所属防区：</string>
    <string name="devicelocation">设备地址：</string>
    <string name="chooseaddress">当前位置(默认)或选择新位置</string>
    <string name="relativedata">相关参数：</string>
    <string name="devicetype">设备类型：</string>
    <string name="solvetable">填写处理报表</string>
    <string name="personalsetting">个人设置</string>
    <string name="person_account">个人账户</string>
    <string name="operateRecord">账户操作记录</string>
    <string name="version">版本说明</string>
    <string name="about_us">关于我们</string>
    <string name="logout">注销登录</string>
    <string name="aboutversion">围界安防</string>
    <string name="aboutversionnumber">Version. 1.00</string>
    <string name="aboutus">我们是人民的海岸</string>
    <string name="aboutus2">构建安全防线</string>
    <string name="notifyTitle">提示</string>
    <string name="notifyMsg">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。</string>
    <string name="gpsNotifyMsg">当前应用需要打开定位功能。\n\n请点击\"设置\"-\"定位服务\"-打开定位功能。</string>
    <string name="setting">设置</string>
    <string name="cancel">取消</string>
    <string name="addressshare">实时位置共享</string>
    <string name="personalacount">个人设置信息</string>
    <string name="changepassword">修改密码</string>
    <string name="newpassword">新密码</string>
    <string name="oldpassword">旧密码</string>
    <string name="confirm">确定</string>
    <string name="personid">员工编号</string>
    <string name="areadefense">区域/防区</string>
    <string name="certificationdevice">认证设备</string>
    <string name="confrimpassword">确认密码</string>
    <string name="operaterecord">账户操作记录</string>
</resources>
