<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@mipmap/jj"
android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/y400" />

    <TextView
        android:id="@+id/app_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/app_name"
        android:gravity="center"
        android:textSize="30sp"
        android:textColor="@color/white"
        />

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="@dimen/y150"
    android:layout_marginLeft="@dimen/x80"
    android:layout_marginRight="@dimen/x80"
    android:layout_marginTop="@dimen/x50">

    <EditText
        android:id="@+id/et_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/x20"
        android:layout_marginLeft="@dimen/x10"
        android:background="@null"
        android:hint="@string/account"
        android:maxLines="1"
        android:textColor="@android:color/black"
        android:textColorHint="@color/grey_light"
        android:textSize="@dimen/x45"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/x5"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/x1"
        android:background="@color/grey_light"/>
</RelativeLayout>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="@dimen/x150"
    android:layout_marginLeft="@dimen/x80"
    android:layout_marginRight="@dimen/x80">

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/x20"
        android:layout_marginLeft="@dimen/x10"
        android:background="@null"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColor="@android:color/black"
        android:textColorHint="@color/grey_light"
        android:textSize="@dimen/x45"/>
    <ImageView
        android:id="@+id/iv_see_password"
        android:layout_width="@dimen/x70"
        android:layout_height="@dimen/x40"
        android:src="@drawable/seepassword"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:scaleType="fitXY"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/x5"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:background="@color/grey_light" />
</RelativeLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/x120"
    android:layout_marginRight="@dimen/x30"
    android:layout_marginTop="@dimen/x30"
    android:paddingBottom="@dimen/x5"
    android:paddingTop="@dimen/x5"
    android:orientation="horizontal"
    android:gravity="center"
    >
    <CheckBox
        android:id="@+id/checkBox_password"
        android:padding="@dimen/x5"
        android:textSize="@dimen/x35"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/check_password"
        android:textColor="@color/grey" android:checked="false"/>
    <CheckBox
        android:id="@+id/checkBox_login"
        android:padding="@dimen/x5"
        android:textSize="@dimen/x35"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/check_login"
        android:textColor="@color/grey" android:checked="false"/>

</LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x100"
        android:layout_marginTop="@dimen/x45"
        android:layout_marginRight="@dimen/x100"
        android:background="@mipmap/login"
        android:paddingTop="@dimen/x5"
        android:paddingBottom="@dimen/x5"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="@dimen/x55" />

</LinearLayout>
