<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:leon="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/list_record">

    <android.support.v7.widget.Toolbar
        android:id="@+id/personalSettingBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:navigationIcon="@mipmap/back7"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        <TextView
            android:clickable="true"
            android:id="@+id/record_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:singleLine="true"
            android:text="@string/personalsetting"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:clickable="true"
            android:id="@+id/accountTextview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:padding="15dp"
            android:text="@string/person_account"
            android:typeface="sans"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:drawableRight="@mipmap/right"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/list_text"></View>
        <TextView
            android:id="@+id/operateRecordTextview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:padding="15dp"
            android:text="@string/operateRecord"
            android:typeface="sans"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:drawableRight="@mipmap/right"/>

    </LinearLayout>



    <RelativeLayout
    android:layout_marginTop="15dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">


    <TextView
        android:id="@+id/addressShareTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:padding="15dp"
        android:text="@string/addressshare"
        android:typeface="sans"
        android:textColor="@color/black"
        android:textSize="18sp" />

        <Switch
            android:clickable="true"
            android:id="@+id/addressShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="19dp"
            android:layout_marginRight="19dp"
            android:switchMinWidth="20dp"
            android:textOff="off"
            android:textOn="on"
            android:thumb="@drawable/thumb"
            android:track="@drawable/track" />
</RelativeLayout>

    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">
        <TextView
            android:id="@+id/versionTextview"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:padding="15dp"
            android:text="@string/version"
            android:typeface="sans"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:drawableRight="@mipmap/right"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/list_text"></View>
        <TextView
            android:id="@+id/aboutusTextview"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:padding="15dp"
            android:text="@string/about_us"
            android:typeface="sans"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:drawableRight="@mipmap/right"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white">
        <TextView
            android:id="@+id/logoutTextview"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:padding="15dp"
            android:gravity="center_horizontal"
            android:text="@string/logout"
            android:typeface="sans"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>
