<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/info_window_shape"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/devicenum"
        android:textColor="@color/black"
        android:layout_margin="5dp"
        android:textSize="15sp" />
    <TextView
        android:id="@+id/devicenum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/num"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_margin="5dp"
        android:text="@string/about_us"/>

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/num"
        android:text="@string/devicestatus"
        android:textColor="@color/black"
        android:layout_margin="5dp"
        android:textSize="15sp" />
    <TextView
        android:id="@+id/devicestatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/devicenum"
        android:layout_toRightOf="@id/status"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_margin="5dp"
        android:text="@string/about_us"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/devicestatus">

        <Button
            android:id="@+id/btn_sitution"
            android:layout_width="90dp"
            android:layout_height="35dp"
            android:text="设备参数"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:background="@drawable/info_window_shape" />
        <Button
            android:id="@+id/btn_camera"
            android:layout_width="90dp"
            android:layout_height="35dp"
            android:layout_toRightOf="@id/btn_sitution"
            android:text="查看监控"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:background="@drawable/info_window_shape" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/info_back"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginLeft="26dp"
        android:layout_toRightOf="@id/devicenum"
        android:scaleType="fitXY"
        android:src="@mipmap/wrong" />
</RelativeLayout>