<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:leon="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/white">

    <android.support.v7.widget.Toolbar
        android:id="@+id/changePasswordBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:navigationIcon="@mipmap/back7"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        <TextView
            android:clickable="true"
            android:id="@+id/record_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:singleLine="true"
            android:text="@string/changepassword"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </android.support.v7.widget.Toolbar>


    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingTop="20dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10px"
            android:background="@drawable/bg_edittext_selector">

            <TextView
                android:id="@+id/label1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="19dp"
                android:layout_marginStart="19dp"
                android:textColor="@color/black"
                android:text="@string/oldpassword"
                android:textSize="18sp" />
            <EditText
                android:id="@+id/oldPassword"
                android:layout_width="match_parent"
                android:layout_height="40dip"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/label1"
                android:textCursorDrawable="@color/black"
                android:background="@null"
                android:gravity="right"
                android:textColor="@color/grey_light"
                android:padding="5dip"
                android:textColorHint="#AAAAAA"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10px"
            android:background="@drawable/bg_edittext_selector">

            <TextView
                android:id="@+id/label2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="19dp"
                android:layout_marginStart="19dp"
                android:textColor="@color/black"
                android:text="@string/newpassword"
                android:textSize="18sp" />
            <EditText
                android:id="@+id/newPassword"
                android:layout_width="match_parent"
                android:layout_height="40dip"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/label2"
                android:textCursorDrawable="@color/black"
                android:background="@null"
                android:gravity="right"
                android:textColor="@color/grey_light"
                android:padding="5dip"
                android:textColorHint="#AAAAAA"
                android:textSize="18sp" />
        </RelativeLayout>

        <Button
            android:id="@+id/confirm_Btn"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp"
            android:layout_marginBottom="5dp"
            android:text="@string/confirm" />
    </LinearLayout>

</LinearLayout>